# SDL2_image

./: CMakeLists.txt  README.txt  SDL2_imageCPack.cmake  SDL2_imageCPackOptions.cmake.in  SDL2_imageConfig.cmake.in
cmake/Package/: CMakeDMGSetup.scpt
test/: CMakeLists.txt
